--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -5,7 +5,7 @@ pod "ORStackView", "~> 1.0.0"
 target "DemoTests" do
   pod 'Specta', '~> 0.2.1'
   pod 'Expecta', '~> 0.2.3'
-  pod 'FBSnapshotTestCase', '~> 1.1'
-  pod 'EXPMatchers+FBSnapshotTest', '~> 1.0'
+  pod 'FBSnapshotTestCase', :head
+  pod 'EXPMatchers+FBSnapshotTest', :head
 end
 
